EDA1 from Junjie

--- a/imgui.ini
+++ b/imgui.ini
@@ -3,13 +3,33 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Open File]
+[Window][ImGui Demo]
+Pos=650,20
+Size=550,680
+Collapsed=0
+
+[Window][Hello, world!]
 Pos=60,60
-Size=843,588
+Size=345,180
+Collapsed=0
+
+[Window][Another Window]
+Pos=61,263
+Size=198,71
+Collapsed=0
+
+[Window][Menu]
+Pos=101,50
+Size=1202,592
+Collapsed=0
+
+[Window][Open File]
+Pos=41,49
+Size=1195,583
 Collapsed=0
 
 [Window][Plot]
-Pos=60,60
-Size=1274,338
+Pos=230,35
+Size=1439,889
 Collapsed=0
 
