--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TableReader = "70df011a-6618-58d7-8e16-3cf9e384cb47"
 
 [extras]
